# bitnet_cuda

./: CMakeLists.txt  README.MD  requirements.txt  setup.py  test.sh
deploy/: DEPLOY.md  trimodal.py
docs/: TestGuide.md
examples/: language_model.py  pytorch_integration.py  simple_classification.py
include/: auto_tuning.h  bitnet_cuda.h  bitnet_types.h  kernels.h  memory_management.h  multi_gpu.h  pytorch_extension.h  utils.h
pytorch_extension/: CMakeLists.txt
pytorch_extension/src/: pytorch_extension.cu
src/: auto_tuning.cu  bitnet_cuda.cu  kernels.cu  memory_management.cu  multi_gpu.cu  utils.cu
src/cpp/: bitnet_cpu.cpp
src/cuda/: BitnetMultiGPU.cpp  autotuner.cpp  bitnet_autotuner.cpp  bitnet_cuda_extra.cpp  bitnet_cuda_kernels.cu  bitnetcuda.cpp  custom_pytorch_cuda_wrapper.cpp  dynamic_tensor_remat.cpp  helper.cpp  opt_mem_pat.cpp  quanatization_kernel.cpp
src/kernels/: cache_optimized_kernels.cu  linear_kernels.cu  matmul_kernels.cu  normalization_kernels.cu  persistent_kernels.cu  quantization_kernels.cu
src/python/: bitnet.py  utils.py
tests/: CMakeLists.txt  test_auto_tuning.cu  test_bitnet_cpu.py  test_bitnet_cuda.py  test_kernels.cu  test_memory_management.cu  test_multi_gpu.cu  test_pytorch_extension.py
